overflow x fix

--- a/BA-DEV1/src/css/02_main/main.scss
+++ b/BA-DEV1/src/css/02_main/main.scss
@@ -43,6 +43,8 @@ body {
 
 .topWrap {
   padding-top: 66px;
+  overflow-x: hidden;
+  max-width: 100%;
   /* padding-top: 50vh; */
 }
 
